[package]
name = "cargo-acx"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
reqwest = { version = "0.11.10", features = ["blocking"] }
kuchiki = "0.8.1"
chrono = "0.4.19"
itertools = "0.10.3"
prettytable-rs = "0.8.0"
open = "2.1.2"
confy = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
log = "0.4.17"
indicatif = "0.16.2"
clap = { version = "3.1.18", features = ["derive"] }
