[package]
name = "nadafes2022_day1"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
nadafes2022_day1-a = { alias = "a", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_a" }
nadafes2022_day1-b = { alias = "b", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_b" }
nadafes2022_day1-c = { alias = "c", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_c" }
nadafes2022_day1-d = { alias = "d", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_d" }
nadafes2022_day1-e = { alias = "e", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_e" }
nadafes2022_day1-f = { alias = "f", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_f" }
nadafes2022_day1-g = { alias = "g", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_g" }
nadafes2022_day1-h = { alias = "h", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_h" }
nadafes2022_day1-i = { alias = "i", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_i" }
nadafes2022_day1-j = { alias = "j", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_j" }
nadafes2022_day1-k = { alias = "k", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_k" }
nadafes2022_day1-l = { alias = "l", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_l" }
nadafes2022_day1-m = { alias = "m", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_m" }
nadafes2022_day1-n = { alias = "n", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_n" }
nadafes2022_day1-o = { alias = "o", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_o" }
nadafes2022_day1-p = { alias = "p", problem = "https://atcoder.jp/contests/nadafes2022_day1/tasks/nadafes2022_day1_p" }

[[bin]]
name = "nadafes2022_day1-a"
path = "src/bin/a.rs"

[[bin]]
name = "nadafes2022_day1-b"
path = "src/bin/b.rs"

[[bin]]
name = "nadafes2022_day1-c"
path = "src/bin/c.rs"

[[bin]]
name = "nadafes2022_day1-d"
path = "src/bin/d.rs"

[[bin]]
name = "nadafes2022_day1-e"
path = "src/bin/e.rs"

[[bin]]
name = "nadafes2022_day1-f"
path = "src/bin/f.rs"

[[bin]]
name = "nadafes2022_day1-g"
path = "src/bin/g.rs"

[[bin]]
name = "nadafes2022_day1-h"
path = "src/bin/h.rs"

[[bin]]
name = "nadafes2022_day1-i"
path = "src/bin/i.rs"

[[bin]]
name = "nadafes2022_day1-j"
path = "src/bin/j.rs"

[[bin]]
name = "nadafes2022_day1-k"
path = "src/bin/k.rs"

[[bin]]
name = "nadafes2022_day1-l"
path = "src/bin/l.rs"

[[bin]]
name = "nadafes2022_day1-m"
path = "src/bin/m.rs"

[[bin]]
name = "nadafes2022_day1-n"
path = "src/bin/n.rs"

[[bin]]
name = "nadafes2022_day1-o"
path = "src/bin/o.rs"

[[bin]]
name = "nadafes2022_day1-p"
path = "src/bin/p.rs"

[dependencies]
num = "0.4.0"
num-bigint = "0.4.3"
num-complex = "0.4.0"
num-integer = "0.1.42"
num-iter = "0.1.40"
num-rational = "0.4.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
# ndarray = "0.13.0"
# nalgebra = "0.20.0"
# alga = "0.9.3"
# libm = "0.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = "0.2.6"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand_hc = "0.3.1"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
# petgraph = "0.5.0"
indexmap = "1.3.2"
regex = "1.3.6"
lazy_static = "1.4.0"
ordered-float = "2.10.0"
ascii = "1.0.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.10.3"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.5.3"
im-rc = "15.0.0"
# fixedbitset = "0.2.0"
# bitset-fixed = "0.1.0"
proconio = { version = "0.4.3", features = ["derive"] }
# text_io = "0.1.8"
# whiteread = "0.5.0"
rustc-hash = "1.1.0"
# smallvec = "1.2.0"

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }
sail = { path = "/Users/roku/room/comp/sail" }

[dev-dependencies]
