[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc222"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc222-a = { alias = "a", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_a" }
abc222-b = { alias = "b", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_b" }
abc222-c = { alias = "c", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_c" }
abc222-d = { alias = "d", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_d" }
abc222-e = { alias = "e", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_e" }
abc222-f = { alias = "f", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_f" }
abc222-g = { alias = "g", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_g" }
abc222-h = { alias = "h", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_h" }

[[bin]]
name = "abc222-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc222-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc222-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc222-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc222-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc222-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc222-g"
path = "src/bin/g.rs"

[[bin]]
name = "abc222-h"
path = "src/bin/h.rs"

[dependencies]
num = "0.4.0"
num-bigint = "0.4.3"
num-complex = "0.4.0"
num-integer = "0.1.42"
num-iter = "0.1.40"
num-rational = "0.4.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
ndarray = "0.15.4"
nalgebra = "0.31.0"
# alga = "0.9.3"
libm = "0.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = "0.2.6"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand_hc = "0.3.1"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
# petgraph = "0.5.0"
indexmap = "1.3.2"
regex = "1.3.6"
lazy_static = "1.4.0"
ordered-float = "3.0.0"
ascii = "1.0.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.10.3"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.5.3"
im-rc = "15.0.0"
# fixedbitset = "0.2.0"
# bitset-fixed = "0.1.0"
proconio = { version = "0.4.3", features = ["derive"] }
# text_io = "0.1.8"
# whiteread = "0.5.0"
# rustc-hash = "1.1.0"
smallvec = "1.2.0"

once_cell = "1.12.0"
priority-queue = "1.2.2"
roaring = "0.9.0"

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }
sail = { path = "./../../../sail" }

[dev-dependencies]
